# computational_statistics

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  generate_data.py  gibbs_sampler.py  mypy.ini  plots.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: comparison_tool.py  generate_data.py  gibbs_sampler.py  metrics.py  plot_comparison.py  plots.py  results.py  run_all_tests.py  run_comparison.py  samplers.py  state.py  tempered_transitions.py  utils.py
