[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computational-statistics"
version = "0.1.0"
description = "Computational Statistics Project - FGV"
authors = [
    {name = "Igor Michels", email = "igorpmichels@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy==1.24.3",
    "plotly==5.14.1",
    "kaleido==0.2.1",
    "scipy==1.10.1",
    "tqdm==4.65.0",
    "numba==0.58.1",
    "joblib==1.2.0",
    "pandas==1.5.3"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.3.0",
    "pylint>=2.17.0"
]

[tool.setuptools]
packages = []

# Configuração do Ruff
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
]

ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by formatter)
    "W605",  # invalid escape sequence
    "N803",  # argument name should be lowercase
    "N806",  # variable name should be lowercase
]

[tool.ruff.lint.isort]
known-first-party = ["computational_statistics"]
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Configuração do MyPy
[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

# Configuração do Pylint
[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "E0401",  # import-error
    "W0621"   # redefined-outer-name
]
